<resources>
    <string name="app_name">Pantau Box</string>
    <string name="pantaubox">PantauBox</string>

    <string name="verifikasi">Masuk</string>
    <string name="copyRight">Copyright©2023 PantauBox</string>
    <string name="gambar_verif1">Gambar_verif</string>
    <string name="gambar_cp">cp_image</string>
    <string name="kandidat_name">Nama Kandidat</string>
    <string name="detail">Klik untuk melihat detail kandidat!</string>
    <string name="gambar_paslon">gambar paslon</string>
    <string name="nama_paslon">Nama paslon</string>
    <string name="nama_wapaslon">Nama wapaslon</string>
    <string name="desc_paslon">Deskripsi</string>
    <string name="tv_wait_reco">Tetaplah berada di posisi ini,\ntekan tombol jika sudah siap.</string>
    <string name="button_vote">vote</string>
    <string name="norut_paslon">nomor urut</string>
    <string name="co_kandidat_name">Nama Wakil Kandidat</string>
    <string name="nik">NIK</string>
    <string name="logout">Logout</string>
    <string name="login_success">Login Success!</string>
    <string name="login_failed">Login Failed: Silakan cek kembali NIK anda!</string>
    <string name="server_caused">http 500</string>
    <string name="nik_kosong">NIK Tidak boleh kosong!</string>
    <string name="required_nik">NIK kurang dari 16 digit</string>
    <string name="step_hint">Petunjuk Verifikasi Wajah :</string>
    <string name="hint_1">1. Pastikan berada di tempat terang</string>
    <string name="hint_2">2. Pastikan wajah tidak tertutup</string>
    <string name="hint_3">3. Tunggu hasil verifikasi</string>
    <string name="btn_goVerif">Ambil gambar</string>
    <string name="verifikasi_masuk">verifikasi</string>

    <string-array name="paslon_name1">
        <item>Joko Widodo</item>
        <item>Prabowo Subianto</item>
    </string-array>
    <string-array name="paslon_name2">
        <item>Maaruf Amin</item>
        <item>Sandiaga Uno</item>
    </string-array>

    <string-array name="paslon_desc">
        <item>
            Visi : \nMenjadi negara yang maju, adil, dan sejahtera dengan mengedepankan kepentingan rakyat.
            \n\nMisi : \n1. Meningkatkan infrastruktur dan investasi untuk mendorong pertumbuhan ekonomi.
            \n2. Meningkatkan kualitas pendidikan dan pelatihan vokasi guna menciptakan sumber daya manusia yang berkualitas.
        </item>
        <item>
            Visi : \nMembangun Indonesia yang adil, makmur, dan berdaulat.
            \n\nMisi : \n1. Menciptakan lebih banyak lapangan kerja dan penghasilan layak untuk kurangi pengangguran dan kemiskinan.
            \n2. Meningkatkan kualitas pendidikan dan pembangunan manusia melalui akses dan investasi dalam pendidikan.
        </item>
    </string-array>

    <string-array name="paslon_img">
        <item>https://i.postimg.cc/R0sqZdgm/jokowimaruf.jpg</item>
        <item>https://i.postimg.cc/gkFypcwD/prabowosandi.jpg</item>
    </string-array>

    <string-array name="norut">
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>