<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginWelcome">

    <ImageView
        android:id="@+id/iv_login1"
        android:layout_width="299dp"
        android:layout_height="377dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"

        android:src="@drawable/vector3"
        android:contentDescription="@string/gambar_verif1"/>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/pantaubox"
        android:textColor="@color/font"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login1" />

    <Button
        android:id="@+id/btn_verif1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/primer"
        android:text="@string/verifikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <ImageView
        android:id="@+id/iv_cp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="191dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="191dp"
        android:contentDescription="@string/gambar_cp"
        android:src="@drawable/logo_pantaubox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_verif1" />

    <TextView
        android:id="@+id/tv_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/copyRight"
        android:textSize="9sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cp"
        tools:ignore="MissingConstraints,SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>