<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".main.VoteActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_paslon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="100dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_paslon"
                android:layout_width="320dp"
                android:layout_height="220dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/gambar_paslon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars[2]" />

            <TextView
                android:id="@+id/tv_norut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/norut_paslon"
                android:textColor="@color/font"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_paslon" />

            <TextView
                android:id="@+id/tv_nama_paslon"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/nama_paslon"
                android:textColor="@color/font"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_norut" />

            <TextView
                android:id="@+id/tv_nama_wapaslon"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/nama_wapaslon"
                android:textColor="@color/font"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama_paslon" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/font"
                android:textSize="15sp"
                android:text="@string/desc_paslon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama_wapaslon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_vote"
        android:layout_width="70.5dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/primer"
        android:text="@string/button_vote"
        app:icon="@drawable/ic_vote"
        app:iconSize="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_paslon" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_cp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo_pantaubox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_vote"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/copyRight"
        android:textSize="9sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cp"
        tools:ignore="MissingConstraints,SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>