<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.AfterVerifActivity">

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/gambar_verif1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[4]" />

    <TextView
        android:id="@+id/tv_afterVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Verifikasi Diri"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:textColor="@color/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

    <TextView
        android:id="@+id/tv_subAfterVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:text="Verifikasi anda hampir selesai \nSilahkan pilih lanjut untuk\nmenyelesaikan proses verifikasi"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="@color/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_afterVer" />

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="Lanjut"
        android:backgroundTint="@color/primer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subAfterVer"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_cp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="191dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="191dp"
        android:contentDescription="@string/gambar_cp"
        android:src="@drawable/logo_pantaubox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_masuk" />

    <TextView
        android:id="@+id/tv_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/copyRight"
        android:textSize="9sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/iv_cp"
        tools:ignore="MissingConstraints,SmallSp"
        tools:layout_editor_absoluteX="150dp" />

</androidx.constraintlayout.widget.ConstraintLayout>